--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Explorers -- Australia'
 - !lcsh 'Australia -- Discovery and exploration'
 - !lcc 'DU'
+- GITenberg
 title: "The Australian Explorers: Their Labours, Perils, and Achievements\r\nBeing\
   \ a Narrative of Discovery from the Landing of Captain Cook to the Centennial Year"
 url: http://www.gutenberg.org/ebooks/41270
